[package]
name = "list-repos"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
gh-token = "0.1.7"
minigh = { path = "../.." }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }

[lints]
workspace = true
